# meteocat

./: .gitignore  .gitlab-ci.yml  .releaserc  .releaserc.toml  AUTHORS.md  CHANGELOG.md  README.md  _version.py  conftest.py  filetree.txt  gitlab_release.py  hacs.json  info.md  locations.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_version.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  improvement.md  new_function.md
.github/workflows/: autocloser.yaml  close-duplicates.yml  close-on-label.yml  publish-zip.yml  release.yml  stale.yml  sync-gitlab.yml
custom_components/meteocat/: __init__.py  condition.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  manifest.json  moon.py  options_flow.py  sensor.py  strings.json  version.py  weather.py
custom_components/meteocat/translations/: ca.json  en.json  es.json
meteocat/: __init__.py  condition.py  config_flow.py  const.py  coordinator.py  entity.py  locations.py  manifest.json  municipi.py  options_flow.py  sensor.py  strings.json  version.py
meteocat/files/: municipis_list.json
meteocat/translations/: ca.json  en.json  es.json
scripts/: update_version.sh
tests/: conftest.py  test_init.py
