[tool.poetry]
name = "meteocat"
version = "0.1.0"
description = "Script para obtener datos meteorológicos de la API de Meteocat"
authors = ["figorr <jdcuartero@yahoo.es>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/figorr1/meteocat"
keywords = ['meteocat']
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
simplejson = "^3.19.3"
python-semantic-release = "^9.14.0"


[tool.semantic_release]
version_source = "pyproject"  # Esto indica que la versión se debe obtener y actualizar desde pyproject.toml
branch = "master"  # Cambia esta línea si usas una rama diferente, como 'main' o 'dev'
version_source = "commit"  # Fuente de la versión basada en los commits
upload_to_pypi = false  # Publicará automáticamente en PyPI


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
