[tool.poetry]
name = "meteocat"
version = "0.1.2"
description = "Script para obtener datos meteorológicos de la API de Meteocat"
authors = ["figorr <jdcuartero@yahoo.es>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/figorr/meteocat"
keywords = ['meteocat']
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
simplejson = "^3.19.3"
setuptools = "^75.5.0"
python-semantic-release = "^9.14.0"


[tool.semantic_release]
branch = "master"  # Cambia esta línea si usas una rama diferente, como 'main' o 'dev'
version_source = "commit"  # Fuente de la versión basada en los commits
changelog = true
changelog_path = "CHANGELOG.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
